Fix content visibility and logo wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,7 @@ body {
   text-decoration: none;
   font-weight: 500;
   font-size: 23px;
+  white-space: nowrap;
 }
 .mainWrapper .RightCol {
   margin-top: 4.8rem !important;
